5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1595_2894.log
== TEST (2019-03-21 17:40:47) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:44:55) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
8 = flout(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 45

# Impressao do valor total:
print(45)
-- ERROR:
File "XXXX", line 5
    8 = flout(input())
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:45:20) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
8 = flout(input(45))

# Calculo do valor a ser pago, incluindo o frete:
total = 45

# Impressao do valor total:
print(45)
-- ERROR:
File "XXXX", line 5
    8 = flout(input(45))
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:14:06) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
8 = flout(input(45))

# Calculo do valor a ser pago, incluindo o frete:
total = 45

# Impressao do valor total:
print(45)
-- ERROR:
File "XXXX", line 5
    8 = flout(input(45))
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:36:46) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
= flout(input(" ")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    = flout(input()) *8
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:36:48) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
= flout(input(" ")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    = flout(input()) *8
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:38:09) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
= float(input(" ")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    = float(input()) *8
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:39:19) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input(" ")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:39:24) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input(" ")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.173419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 8, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:40:03) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:40:10) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.151453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 8, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:40:27) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input(""))*8

# Calculo do valor a ser pago, incluindo o frete:
total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:41:31) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo = float(input(""))*8

# Calculo do valor a ser pago, incluindo o frete: 45.0

total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:42:38) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input(""))*8

# Calculo do valor a ser pago, incluindo o frete: 45.0

total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:42:41) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input(""))*8

# Calculo do valor a ser pago, incluindo o frete: 45.0

total = jogo + frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.153633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 9, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:42:55) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete: 45.0

total = jogo + frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total = jogo + frete
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:33) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
frete=45.0
total = jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:37) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
frete= 45.0
total = jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:43:44) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
frete = 45.0
total = jogo + frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:10) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
frete=45.0
total=jogo+frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:47:32) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:

total=100*8

# Impressao do valor total:
print(total)
-- OUTPUT:
800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:48:34) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:

total=100*8

# Impressao do valor total:
print(total)
-- OUTPUT:
800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:50:21) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:

total=845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:51:02) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8

# Calculo do valor a ser pago, incluindo o frete:
100.0*8
total=845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:13:11) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8.0

# Calculo do valor a ser pago, incluindo o frete:
100.0*8
total=845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:13:43) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) *8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8
total=845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:15:49) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("100")) *8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8
total=845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:16:08) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=100.0 float(input("")) *8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8
total=845

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    jogo=100.0 float(input("")) *8.0
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:16:41) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input("")) 100.0*8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8
total=845

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    jogo=float(input("")) 100.0*8.0
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:17:02) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input(""))*8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8
total=845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:18:26) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input(""))*8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8+45
total=845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:26) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
jogo=float(input(""))*8.0

# Calculo do valor a ser pago, incluindo o frete:
100*8+45
total=845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:25) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:14:47) 
-- CODE:
#var=input ("Este código é apenas um ESBOÇO da solução").
#input (Modifique-o para atender as especificações do enunciado).

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.163601
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
